These are the Release Notes for Revision 2.6.0 of netperf:

*) Initial pass at support for --enable-intervals (WANT_INTERVALS) for
   Windows, courtesy of Jonathan Cook.

*) When in demo mode (./configure --enable-demo and a global -D
   <interval> option netperf will make sure it emits "one last
   interval result" when the test is terminated.  This should assist
   when post-processing results through the likes of rrdtool when
   there is a slow-down in the performance just at the end that would
   have stretched the interval to beyond the test termination.

*) A fix to have the AF_UNIX tests realize that the value for "take
   the system default" socket buffer size became -1 years ago.  Bug
   found by Eric Dumazet.

*) Include a patch from Dave Taht to enable symbolic manipulation of
   IP_TOS values.

*) Include a patch from Sachar Raindel to enable the omni tests to get
   ENOBUFS under Linux when the socket buffer is larger than the tx
   queue of the egress interface.  This will help preclude netperf's
   reporting a larger than link-rate send-side figure.

*) Fix a problem with late checking of the return from select() in
   src/netserver.c. Reported by Waqar Sheikh.

*) A new global -Z option has been added to netperf and netserver.
   This takes as an argument a passphrase.  In the case of netserver
   it will expect a control message with the passphrase as the first
   thing it receives on the control connection.  If netserver does not
   receive a control message with the passphrase it will close the
   control connection and move-on.  If the netserver receives a
   control message with a passprhase when it is not lookign for one,
   it will be ignored. There is at present a 20 second timeout on the
   attempted receipt of the request message. In the case of netperf,
   the passphrase will be the first thing sent on the control
   connection.  There is no response to a passphrase control message.
